Workshop1/Part2/errors.txt
UI.cpp: In function ‘bool ssd::search()’:
UI.cpp:30:11: warning: unused variable ‘name’ [-Wunused-variable]
      char name[] = {};
           ^
main_prof.cpp:17:17: error: ‘sdds’ is not a namespace-name
 using namespace sdds;
                 ^
main_prof.cpp:17:21: error: expected namespace-name before ‘;’ token
 using namespace sdds;
                     ^
main_prof.cpp: In function ‘int main()’:
main_prof.cpp:19:23: error: ‘gpaQuery’ was not declared in this scope
  if(gpaQuery("std.csv")) {
                       ^
main_prof.cpp:19:23: note: suggested alternative:
In file included from main_prof.cpp:16:0:
GPAlist.h:21:11: note:   ‘ssd::gpaQuery’
      bool gpaQuery(const char *filename);
           ^
main_prof.cpp:24:29: error: ‘gpaQuery’ was not declared in this scope
  if(!gpaQuery("students.csv")) {
                             ^
main_prof.cpp:24:29: note: suggested alternative:
In file included from main_prof.cpp:16:0:
GPAlist.h:21:11: note:   ‘ssd::gpaQuery’
      bool gpaQuery(const char *filename);
           ^
